# check-email-exists

./: .gitignore  .travis.yml  README.md  jest.config.js  package-lock.json  package.json
lib/: index.js
native/: Cargo.toml
native/src/: lib.rs
test/: index.spec.js
