[package]
name = "check-email-exists"
version = "0.1.0"
authors = ["zinai <313670398L@gmail.com>"]
license = "MIT"
build = "build.rs"
exclude = ["artifacts.json", "index.node"]
edition = "2018"


[lib]
name = "check_email_exists"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.3.3"

[dependencies]
neon = "0.3.3"
neon-serde = "0.2.0"
serde = "1.0"
serde_json = "1.0"
check-if-email-exists = "0.6.1"
tokio = { version = "0.2", features = ["full"] }



